@@ -29,7 +29,7 @@
     </script>
   </head>
 
-  <BODY  data-spy="scroll" data-target="#navcol" >
+  <BODY>
     <DIV class="navbar navbar-fixed-top navbar-inverse">
       <DIV class="navbar-inner">
 	<A class="brand"><img src="yotelogo.png"></A>
@@ -71,9 +71,9 @@
 	<H2>It's for those who are </H2>
       </DIV>	    
       <UL>
-	<LI>too lazy to use schemas</LI>
-	<LI>rushed and just want to code business logic</LI>
-	<LI>confident they can keep up with fickle design changes</LI>
+	<LI>too Lazy to use schemas</LI>
+	<LI>Rushed and just want to code business logic</LI>
+	<LI>Confident they can keep up with fickle design changes</LI>
       </UL>
     </section>
 
@@ -92,11 +92,13 @@
       <DIV class="page-header">
 	<H1>Contacting the programmer</H1>
       </DIV>
+      <p>
       My name is Eric Wolf and I've been working on Yote for a good three years, on and off, when I have time. 
-      <BR>
+      </p><p>
       I can be reached at <a href="mailto:coyocanid@gmail.com">coyocanid@gmail.com</a>.
-      <BR>
+      </p><p>
       Yes, I will help with any questions or installation issues.
+      </p>
     </SECTION>	  
     
     <script src="/js/bootstrap.js"></script>
