@@ -14,7 +14,6 @@
    $().ready(function(){ 
        $.yote.debug = true;
        function show_header( name, obj, attachpoint ) {
-//	   obj.load_direct_descendents();
 	   var plus_id = $.yote.util.next_id();
 	   var list_id = $.yote.util.next_id();
 	   attachpoint.append( '<span><a id="a_' + obj.id + '" name="a_' + obj.id + '">name</a></span> <span id=' + plus_id +
